Fix alignfull styles inside of entry-content

--- a/seedlet-blocks/style.css
+++ b/seedlet-blocks/style.css
@@ -28,6 +28,15 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.
 */
 
+/* Center the site title. */
 .site-header h1 {
 	text-align: center;
+}
+
+/* Make sure full-width items in entry content show up as full-width. */
+.wp-block-group.site-content .wp-block-group__inner-container .entry-content {
+	max-width: calc(100% + (2 * var(--global--spacing-horizontal)));
+	width: calc(100% + (2 * var(--global--spacing-horizontal)));
+	margin-left: calc(-1 * var(--global--spacing-horizontal));
+	margin-right: auto;
 }
